--- a/metrics/pipe_tasks.yaml
+++ b/metrics/pipe_tasks.yaml
@@ -3,7 +3,7 @@
 ProcessCcdTime: &RunningTime
     description: Wall-clock time elapsed in ProcessCcdTask.
     unit: s
-    reference:
+    reference: &ApMetrics
         url: https://confluence.lsstcorp.org/pages/viewpage.action?spaceKey=~ebellm&title=Alert+Production+Metrics
     tags:
         - ap_verify
@@ -30,8 +30,7 @@ RegisterImageTime:
 ProcessCcdMemory: &Memory
     description: Maximum resident set size in or before any ProcessCcdTask process.
     unit: byte
-    reference:
-        url: https://confluence.lsstcorp.org/pages/viewpage.action?spaceKey=~ebellm&title=Alert+Production+Metrics
+    reference: *ApMetrics
     tags:
         - ap_verify
         - workflow
