--- a/metrics/pipe_tasks.yaml
+++ b/metrics/pipe_tasks.yaml
@@ -41,3 +41,20 @@ ImageDifferenceMemory:
     <<: *Memory
     description: Maximum resident set size in or before any ImageDifferenceTask process.
 
+numDeblendedSciSources:
+    description: Number of direct imaging sources that have been deblended.
+    unit: ''
+    reference: *ApMetrics
+    tags:
+        - ap_verify
+        - CCD
+        - monitoring
+
+numDeblendChildSciSources:
+    description: Number of sources created by deblending.
+    unit: ''
+    reference: *ApMetrics
+    tags:
+        - ap_verify
+        - CCD
+        - monitoring
